Fixed text centering for headers on smaller displays

--- a/src/scss/mobile/_breakpoints.scss
+++ b/src/scss/mobile/_breakpoints.scss
@@ -15,3 +15,15 @@
         grid-area: unset;
     }
 }
+
+@media screen and (max-width: 710px) {
+    .contents__header {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .header-s {
+        text-align: center;
+    }
+}
